# pycodex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  NOTICE  README.md  codex-skill.md  engineering-plan.md  instruction-plan.md  m5-review.md  pyproject.toml  resume-plan.md  skills-plan.md  status-plan.md  summary-plan.md  todo-m2.md  todo-m3.md  todo-m4.md  todo-m5.md  todo-m6.md  todo-m7.md  todo-m8.md  todo-m9.md  todo.md  tui-plan.md
.claude/commands/: build-milestone.md  build-task.md  build-tasks.md  commit.md  review.md  security-check.md  status.md  verify.md
.github/workflows/: ci.yml
archive/: todo-m5.md  todo-m6.md
docs/: README.md  m6-decisions.md  todo-m1.md  tui-input-editor.md
docs/ai/: harness.md  memory.md  system-map.md
docs/archive/: resume-plan.md  tui-input-editor.md  tui-plan.md
pycodex/: README.md  __init__.py  __main__.py
pycodex/approval/: AGENTS.md  __init__.py  exec_policy.py  policy.py  sandbox.py
pycodex/cli/: AGENTS.md
pycodex/core/: AGENTS.md  agent.py  agent_profile.py  compaction.py  config.py  event_adapter.py  fake_model_client.py  initial_context.py  model_client.py  project_doc.py  rollout_recorder.py  rollout_replay.py  rollout_schema.py  session.py  session_store.py  tui_bridge.py
pycodex/protocol/: __init__.py  events.py
pycodex/tools/: AGENTS.md  __init__.py  base.py  grep_files.py  list_dir.py  orchestrator.py  outcome.py  read_file.py  (+2 more)
tests/: README.md  conftest.py  test_main.py
tui/: AGENTS.md  README.md  eslint.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
(+107 files in other folders)
